--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.cshtml
@@ -16,50 +16,47 @@
 	<div class="page-title">
 		<h1>@T("Checkout.SelectPaymentMethod")</h1>
 	</div>
-	<div class="page-body checkout-data">
-		@using (Html.BeginForm())
+	<div class="page-body checkout-data" style="padding-bottom: 20px;">
+		@Html.Widget("checkout_payment_method_top")
+
+		@if (Model.ErrorMessage.HasValue())
 		{
-			@Html.Widget("checkout_payment_method_top")
-
-			if (Model.ErrorMessage.HasValue())
-			{
-				<div class="alert alert-error">
-					@Html.Raw(T("Plugins.Payments.PayPalPlus.MethodUnavailable"))
-					<br />
-					@if (!Model.ApprovalUrl.HasValue())
-					{
-						@T("Plugins.SmartStore.PayPal.NoApprovalUrlReturned")
-					}
-					@Model.ErrorMessage
-				</div>
-			}
-			else if (Model.PayPalPlusPseudoMessageFlag.HasValue() && Model.PayPalPlusPseudoMessageFlag == "1")
-			{
-				<div class="alert alert-error">
-					@Html.Raw(T("Plugins.Payments.PayPalPlus.SorryFailure"))
-				</div>
-			}
-
-			if (Model.FullDescription.HasValue())
-			{
-				<div class="payment-method-description">
-					@Html.Raw(Model.FullDescription)
-				</div>
-			}
-
-			<div id="PayPalPlusPaymentWall"></div>
-
-			<div class="select-button clearfix">
-				<a class="btn pull-left" href="@Url.Action("ShippingMethod", "Checkout", new { area = "" })">
-					<i class="fa fa-caret-left"></i>&nbsp;@T("Common.Back")
-				</a>
-
-				<button id="PayPalPlusNextCheckoutStep" class="btn btn-warning pull-right payment-method-next-step-button hide">
-					@T("Checkout.NextButton")&nbsp;<i class="fa fa-caret-right"></i>
-				</button>
+			<div class="alert alert-error">
+				@Html.Raw(T("Plugins.Payments.PayPalPlus.MethodUnavailable"))
+				<br />
+				@if (!Model.ApprovalUrl.HasValue())
+				{
+					@T("Plugins.SmartStore.PayPal.NoApprovalUrlReturned")
+				}
+				@Model.ErrorMessage
 			</div>
-
-			@Html.Widget("checkout_payment_method_bottom")
 		}
+		else if (Model.PayPalPlusPseudoMessageFlag.HasValue() && Model.PayPalPlusPseudoMessageFlag == "1")
+		{
+			<div class="alert alert-error">
+				@Html.Raw(T("Plugins.Payments.PayPalPlus.SorryFailure"))
+			</div>
+		}
+
+		@if (Model.FullDescription.HasValue())
+		{
+			<div class="payment-method-description">
+				@Html.Raw(Model.FullDescription)
+			</div>
+		}
+
+		<div id="PayPalPlusPaymentWall"></div>
+
+		<div class="select-button clearfix">
+			<a class="btn pull-left" href="@Url.Action("ShippingMethod", "Checkout", new { area = "" })">
+				<i class="fa fa-caret-left"></i>&nbsp;@T("Common.Back")
+			</a>
+
+			<button id="PayPalPlusNextCheckoutStep" class="btn btn-warning pull-right payment-method-next-step-button hide">
+				@T("Checkout.NextButton")&nbsp;<i class="fa fa-caret-right"></i>
+			</button>
+		</div>
+
+		@Html.Widget("checkout_payment_method_bottom")
 	</div>
 </div>
