PayPal Plus: Display payment fee above payment wall

--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.Mobile.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.Mobile.cshtml
@@ -46,6 +46,13 @@
 			</div>
 		}
 
+		@if (Model.HasAnyFees)
+		{
+			<div id="PayPalPlusPaymentFeeContainer" class="payment-fee" style="visibility:hidden; margin-bottom:0;">
+				@T("Plugins.Payments.PayPalPlus.PaymentFeeMessage")
+			</div>
+		}
+
 		<div id="PayPalPlusPaymentWall"></div>
 
 		<div class="clear"></div>
