--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/MegaMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/MegaMenu.cshtml
@@ -42,55 +42,52 @@
 	return;
 }
 
-<div class="container">
-	<nav id='megamenu' class='navbar @(GetThemeVariable<bool>("InverseNavbar") ? "navbar-dark bg-inverse" : "navbar-light bg-faded")'>
-		<ul class="nav navbar-nav nav-smart shrinkable">
+<ul class="nav navbar-nav x-nav-smart shrinkable">
                     
-			@Html.Widget("megamenu_before_first_item")
+	@Html.Widget("megamenu_before_first_item")
 
-			@foreach (var node in Model.Root.Children)
+	@foreach (var node in Model.Root.Children)
+	{
+		var item = node.Value;
+
+		if (!item.Visible)
+		{
+			continue;
+		}
+
+		var itemUrl = GetNodeLink(node);
+		var itemState = node.GetNodePathState(Model.Path);
+
+		<li class='@(GetCssClassForNode(node, itemState))'>
+			@if (node.HasChildren)
 			{
-				var item = node.Value;
-
-				if (!item.Visible)
-				{
-					continue;
-				}
-
-				var itemUrl = GetNodeLink(node);
-				var itemState = node.GetNodePathState(Model.Path);
-
-				<li class='@(GetCssClassForNode(node, itemState))'>
-					@if (node.HasChildren)
-					{
-						<a href="@itemUrl" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							@item.Text
-						</a>
-						@CreateDrilldownMenu(node.Children, true)
-					}
-					else
-					{
-						<a href="@itemUrl" class="nav-link">
-							@item.Text
-						</a>
-					}
-				</li>
-			}
-
-			@Html.Widget("megamenu_after_last_item")
-
-		</ul>
-
-		<ul class="nav navbar-nav nav-smart x-shrink-menu pull-right hide">
-			<li class="nav-item dropdown">
-				<a class="nav-link x-dropdown-toggle" href="#" data-target="#" onclick="return false;" rel="nofollow">
-					<i class="fa fa-ellipsis-h"></i>
+				<a href="@itemUrl" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					@item.Text
 				</a>
-				<div class="dropdown-menu pull-right"></div>
-			</li>
-		</ul>
-	</nav>
-</div>
+				@CreateDrilldownMenu(node.Children, true)
+			}
+			else
+			{
+				<a href="@itemUrl" class="nav-link">
+					@item.Text
+				</a>
+			}
+		</li>
+	}
+
+	@Html.Widget("megamenu_after_last_item")
+
+</ul>
+
+<ul class="nav navbar-nav x-nav-smart shrink-menu pull-right" hidden>
+	<li class="nav-item dropdown">
+		<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" rel="nofollow">
+			<i class="fa fa-ellipsis-h"></i>
+		</a>
+		<div class="dropdown-menu dropdown-menu-right"></div>
+	</li>
+</ul>
+
 
 @helper CreateDrilldownMenu(IEnumerable<TreeNode<MenuItem>> nodes, bool isRoot)
 {
