--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Root.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Root.cshtml
@@ -10,11 +10,25 @@
         @RenderSection("header")
     }
     else {
-        <section id="header">
-            @Html.Action("ShopBar", "Common", new { area = "" })
-            @Html.Action("Header", "Common", new { area = "" })
-            @Html.Action("MegaMenu", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId, area = "" })
-        </section>
+        <header>
+			<div class="menubar">
+				<div class="container menubar--inner">
+					@Html.Action("Header", "Common", new { area = "" })
+				</div>
+			</div>
+			<div class="shopbar">
+				<div class="container shopbar--inner">
+					@Html.Action("ShopBar", "Common", new { area = "" })
+				</div>
+			</div>
+            <div class="megamenu m-b-1">
+				<nav class='navbar @(GetThemeVariable<bool>("InverseNavbar") ? "navbar-dark bg-inverse" : "navbar-light bg-faded")'>
+					<div class="container megamenu--inner">
+						@Html.Action("MegaMenu", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId, area = "" })
+					</div>
+				</nav>
+			</div>
+        </header>
     }
 
     @Html.Action("JavaScriptDisabledWarning", "Common", new { area = "" })
