--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/ShopBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/ShopBar.cshtml
@@ -1,108 +1,120 @@
 ﻿@model ShopBarModel
 @using SmartStore.Web.Models.Common;
 
-<div class="clearfix">
-    @if (Model.ShoppingCartEnabled)
-    {
-        <!-- CART -->
-        <div class="shopbar-tool pull-left" id="shopbar-cart">
-            <a class="shopbar-button clearfix" data-target="shopbar-flyout-cart" href="@Url.RouteUrl("ShoppingCart")" data-summary-href='@Url.Action("ShoppingCartSummary", "ShoppingCart")'>
-                <figure class="shopbar-button-icon pull-left">
-	                <i class="fa fa-shopping-basket"></i>
-                    <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.ShoppingCartItems == 0 ? "hide" : "")' data-bind-to="TotalProducts">@Model.ShoppingCartItems</span>
-                </figure>
-                <span class="shopbar-button-label pull-left">
-                    <span>@T("ShoppingCart.Totals.SubTotal"): <span data-bind-to="SubTotal">@Model.ShoppingCartAmount</span></span><br />
-                    <span style="font-weight: bold">@T("Common.Shopbar.Basket") <i class="fa fa-caret-down"></i></span>
-                </span>
-                <span class="sm-arrow"></span>
-            </a>                
-            <div class="shopbar-flyout" id="shopbar-flyout-cart" data-href='@Url.Action("FlyoutShoppingCart", "ShoppingCart")'>
-                @*@Html.Action("FlyoutShoppingCart", "ShoppingCart")*@
-            </div>
-        </div>
-    }
+@{ 
+	string accountUrl = Model.IsAuthenticated ? Url.Action("Info", "Customer") : Url.RouteUrl("Login", new { ReturnUrl = Request.RawUrl });
+}
 
-    @{
-        string accountUrl = Model.IsAuthenticated ? Url.Action("Info", "Customer") : Url.RouteUrl("Login", new { ReturnUrl = Request.RawUrl });
-    }
+<div class="shopbar">
 
-    <!-- ACCOUNT -->
-    <div class="shopbar-tool pull-right loaded" id="shopbar-account">
-		<a class='shopbar-button clearfix@(!Model.IsAuthenticated ? " no-drop" : "")' data-target="shopbar-flyout-account" href="@accountUrl" rel="nofollow">
-			<figure class="shopbar-button-icon pull-left">
-				<i class="fa fa-user"></i>
-			</figure>
-			<span class="shopbar-button-label pull-left">
-				@if (Model.IsAuthenticated)
-				{
-					<span>@Model.CustomerEmailUsername</span><br />
-					<span style="font-weight: bold">
-						@T("Account.MyAccount")
-						<i class="fa fa-caret-down"></i>
-					</span>
-				}
-				else
-				{
-					<span>@T("Common.Shopbar.GuestGreeting")</span><br />
-					<span style="font-weight: bold">@T("Account.Login")</span>
-				}
-			</span>
-			<span class="sm-arrow"></span>
+	<!-- LOGO -->
+	<div class="shopbar-col shop-logo">
+		<a class="shop-logo-link" href='@Url.RouteUrl("HomePage")'>
+			<img class="img-fluid shop-logo-img" src="~/Media/Thumbs/0001/0001566.png" alt="SmartStore.NET Demo-Shop" title="SmartStore.NET Demo-Shop">
+			@*<img class="img-fluid" src="https://www.bauer-music.de/Media/Thumbs/0002/0002413.png" alt="SmartStore.NET Demo-Shop" title="SmartStore.NET Demo-Shop">*@
 		</a>
+	</div>
 
-        @if (Model.IsAuthenticated) 
-        {
-            @Html.Action("AccountDropdown", "Common")
-        }
-    </div>
+	<!-- SEARCH -->
+	<div class="shopbar-col shopbar-col--stretch shopbar-search">
+		@Html.Action("SearchBox", "Catalog")
+	</div>
 
-    <!-- WISHLIST -->
-    @if (Model.WishlistEnabled)
-    {
-        <div class="shopbar-divider"></div>
-            
-        <div class="shopbar-tool pull-right" id="shopbar-wishlist">
-            <a class="shopbar-button clearfix" data-target="shopbar-flyout-wishlist" href="@Url.RouteUrl("Wishlist")" data-summary-href='@Url.Action("ShoppingCartSummary", "ShoppingCart", new { isWishlist = true })'>
-                <figure class="shopbar-button-icon pull-left">
-					<i class="fa fa-heart-o"></i>
-                    <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.WishlistItems == 0 ? "hide" : "")' data-bind-to="TotalProducts">@Model.WishlistItems</span>
-                </figure>
-                <span class="shopbar-button-label pull-left">
-                    <span>@T("Common.Shopbar.WishlistPartOne")</span><br />
-                    <span style="font-weight: bold">@T("Common.Shopbar.WishlistPartTwo") <i class="fa fa-caret-down"></i></span>
-                </span>
-                <span class="sm-arrow"></span>
-            </a>                
-            <div class="shopbar-flyout" id="shopbar-flyout-wishlist" data-href='@Url.Action("FlyoutWishlist", "ShoppingCart")'>
-                @*@Html.Action("WishlistDropdown", "ShoppingCart")*@
-            </div>
-        </div>
-    } 
+	<!-- TOOLS -->
+	<div class="shopbar-col shopbar-tools">
+		<!-- Tool "Wishlist" -->
+		@if (Model.WishlistEnabled)
+		{
+			<div class="shopbar-divider" hidden></div>
+			<div class="shopbar-tool" id="shopbar-wishlist">
+				<a class="shopbar-button" data-target="shopbar-flyout-wishlist" href="@Url.RouteUrl("Wishlist")" data-summary-href='@Url.Action("ShoppingCartSummary", "ShoppingCart", new { isWishlist = true })'>
+					<figure class="shopbar-button-icon">
+						<i class="fa fa-heart-o"></i>
+						<span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.WishlistItems == 0 ? "hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.WishlistItems</span>
+					</figure>
+					<span class="shopbar-button-label">
+						<span>@T("Common.Shopbar.WishlistPartOne")</span><br />
+						<span style="font-weight: bold">@T("Common.Shopbar.WishlistPartTwo") <i class="fa fa-caret-down"></i></span>
+					</span>
+					<span class="sm-arrow"></span>
+				</a>
+				<div class="shopbar-flyout" id="shopbar-flyout-wishlist" data-href='@Url.Action("FlyoutWishlist", "ShoppingCart")'>
+					@*@Html.Action("WishlistDropdown", "ShoppingCart")*@
+				</div>
+			</div>
+		}
 
-    <!-- COMPARE -->
-    @if (Model.CompareProductsEnabled)
-    {
-        <div class="shopbar-divider"></div>
-            
-        <div class="shopbar-tool pull-right" id="shopbar-compare">
-            <a class="shopbar-button clearfix" data-target="shopbar-flyout-compare" href="@Url.Action("CompareProducts", "Catalog")" data-summary-href='@Url.Action("CompareSummary", "Catalog")'>
-                <figure class="shopbar-button-icon pull-left">
-					<i class="fa fa-file-text"></i>
-                    <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.CompareItems == 0 ? "hide" : "")' data-bind-to="Count">@Model.CompareItems</span>
-                </figure>
-                <span class="shopbar-button-label pull-left">
-                    <span>@T("Common.Shopbar.CompareProductsPartOne")</span><br />
-                    <span style="font-weight: bold">@T("Common.Shopbar.CompareProductsPartTwo") <i class="fa fa-caret-down"></i></span>
-                </span>
-                <span class="sm-arrow"></span>
-            </a>
-            <div class="shopbar-flyout" id="shopbar-flyout-compare" data-href='@Url.Action("FlyoutCompare", "Catalog")'>
-                @*@Html.Action("CompareDropdown", "Catalog")*@
-            </div>
-        </div>
-    }
+		<!-- Tool "Compare" -->
+		@if (Model.CompareProductsEnabled)
+		{
+			<div class="shopbar-divider" hidden></div>
+			<div class="shopbar-tool" id="shopbar-compare">
+				<a class="shopbar-button" data-target="shopbar-flyout-compare" href="@Url.Action("CompareProducts", "Catalog")" data-summary-href='@Url.Action("CompareSummary", "Catalog")'>
+					<figure class="shopbar-button-icon">
+						<i class="fa fa-retweet"></i>
+						<span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.CompareItems == 0 ? "hidden-xs-up" : "")' data-bind-to="Count">@Model.CompareItems</span>
+					</figure>
+					<span class="shopbar-button-label">
+						<span>@T("Common.Shopbar.CompareProductsPartOne")</span><br />
+						<span style="font-weight: bold">@T("Common.Shopbar.CompareProductsPartTwo") <i class="fa fa-caret-down"></i></span>
+					</span>
+					<span class="sm-arrow"></span>
+				</a>
+				<div class="shopbar-flyout" id="shopbar-flyout-compare" data-href='@Url.Action("FlyoutCompare", "Catalog")'>
+					@*@Html.Action("CompareDropdown", "Catalog")*@
+				</div>
+			</div>
+		}
 
-    <!-- SEARCH -->
-    @Html.Action("SearchBox", "Catalog")
-</div> 
+		<!-- Tool "Account" -->
+		<div class="shopbar-tool loaded" id="shopbar-account">
+			<a class='shopbar-button@(!Model.IsAuthenticated ? " no-drop" : "")' data-target="shopbar-flyout-account" href="@accountUrl" rel="nofollow">
+				<figure class="shopbar-button-icon">
+					<i class="fa fa-user"></i>
+				</figure>
+				<span class="shopbar-button-label" xhidden>
+					@if (Model.IsAuthenticated)
+					{
+						<span>@Model.CustomerEmailUsername</span><br />
+						<span style="font-weight: bold">
+							@T("Account.MyAccount")
+							<i class="fa fa-caret-down"></i>
+						</span>
+					}
+					else
+					{
+						<span>@T("Common.Shopbar.GuestGreeting")</span><br />
+						<span style="font-weight: bold">@T("Account.Login")</span>
+					}
+				</span>
+				<span class="sm-arrow"></span>
+			</a>
+
+			@if (Model.IsAuthenticated)
+			{
+				@Html.Action("AccountDropdown", "Common")
+			}
+		</div>
+
+		<!-- Tool "Cart" -->
+		@if (Model.ShoppingCartEnabled)
+		{	
+			<div class="shopbar-tool" id="shopbar-cart">
+				<a class="shopbar-button" data-target="shopbar-flyout-cart" href="@Url.RouteUrl("ShoppingCart")" data-summary-href='@Url.Action("ShoppingCartSummary", "ShoppingCart")'>
+					<figure class="shopbar-button-icon">
+						<i class="fa fa-shopping-basket"></i>
+						<span class='label label-pill @(GetThemeVariable<string>("ShopBarLabel"))@(Model.ShoppingCartItems == 0 ? " hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.ShoppingCartItems</span>
+					</figure>
+					<span class="shopbar-button-label">
+						<span data-bind-to="SubTotal">@Model.ShoppingCartAmount</span><br />
+						<span style="font-weight: bold">@T("Common.Shopbar.Basket") <i class="fa fa-caret-down"></i></span>
+					</span>
+					<span class="sm-arrow"></span>
+				</a>
+				<div class="shopbar-flyout" id="shopbar-flyout-cart" data-href='@Url.Action("FlyoutShoppingCart", "ShoppingCart")'>
+					@*@Html.Action("FlyoutShoppingCart", "ShoppingCart")*@
+				</div>
+			</div>
+		}
+	</div>
+</div>
