--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/BackInStockSubscribePopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/BackInStockSubscribePopup.cshtml
@@ -1,8 +1,7 @@
 ﻿@model BackInStockSubscribeModel
 @using SmartStore.Web.Models.Catalog;
 @{
-    /*pop-up windows*/
-    Layout = "~/Views/Shared/_RootPopup.cshtml";
+    Layout = "_Layout.Popup";
 }
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "back-in-stock-subscription-form" }))
 {
