--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Layout.Popup.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Layout.Popup.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Administration/Views/Shared/_Root.Head.cshtml";
+    Layout = "_Document";
     Html.AddBodyCssClass("popup");
 }
 
