--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/ShopBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/ShopBar.cshtml
@@ -38,7 +38,7 @@
 					</span>
 					<span class="sm-arrow"></span>
 				</a>
-				<div class="shopbar-flyout" id="shopbar-flyout-wishlist" data-href='@Url.Action("FlyoutWishlist", "ShoppingCart")'>
+				<div class="shopbar-flyout shopbar-flyout--right" id="shopbar-flyout-wishlist" data-href='@Url.Action("FlyoutWishlist", "ShoppingCart")'>
 					@*@Html.Action("WishlistDropdown", "ShoppingCart")*@
 				</div>
 			</div>
@@ -60,7 +60,7 @@
 					</span>
 					<span class="sm-arrow"></span>
 				</a>
-				<div class="shopbar-flyout" id="shopbar-flyout-compare" data-href='@Url.Action("FlyoutCompare", "Catalog")'>
+				<div class="shopbar-flyout shopbar-flyout--right" id="shopbar-flyout-compare" data-href='@Url.Action("FlyoutCompare", "Catalog")'>
 					@*@Html.Action("CompareDropdown", "Catalog")*@
 				</div>
 			</div>
@@ -111,7 +111,7 @@
 					</span>
 					<span class="sm-arrow"></span>
 				</a>
-				<div class="shopbar-flyout" id="shopbar-flyout-cart" data-href='@Url.Action("FlyoutShoppingCart", "ShoppingCart")'>
+				<div class="shopbar-flyout shopbar-flyout--right" id="shopbar-flyout-cart" data-href='@Url.Action("FlyoutShoppingCart", "ShoppingCart")'>
 					@*@Html.Action("FlyoutShoppingCart", "ShoppingCart")*@
 				</div>
 			</div>
