--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     }
     else {
         <header>
-			<div class="menubar-section" hidden>
+			<div class="menubar-section">
 				<div class="container menubar-container">
 					@Html.Action("Header", "Common", new { area = "" })
 				</div>
