--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/shared/_utils.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/shared/_utils.scss
@@ -174,6 +174,32 @@ code {
 }
 
 
+// Vertical aligns
+// ========================================================================
+.vertical-align {
+    font-size: 0;
+
+    &:before {
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+        content: "";
+    }
+
+    &-middle, &-bottom {
+        display: inline-block;
+        max-width: 100%;
+        font-size: 1rem;
+    }
+    &-middle {
+        vertical-align: middle;
+    }
+    &-bottom {
+        vertical-align: bottom;
+    }
+}
+
+
 // Responsive heading sizes
 // ==============================================================
 
