--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
@@ -1,3 +1,5 @@
+/*@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,300,300italic);*/
+
 
 /* Theme: NEW ALPHA 
 ------------------------------ */
@@ -11,6 +13,8 @@ $enable-hover-media-query:  false;
 $enable-grid-classes:       true;
 
 $headings-line-height:      1.3; 
+
+/*$font-family-sans-serif:    'Roboto', Helvetica, Arial, sans-serif;*/ 
 
 //$font-size-base:            .92rem;
 $line-height:                1.8;
