New theme: more css & layouting

--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/Header.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/Header.cshtml
@@ -9,14 +9,14 @@
 		<a class="menubar-link" href="#"><i class="fa fa-user"></i>&nbsp;&nbsp;Anmelden</a>
 	</nav>
 
-	<nav class="menubar-group">
-		<a class="menubar-link fw-600" href="#">News</a>
-		<a class="menubar-link fw-600" href="#">Blog</a>
-		<a class="menubar-link fw-600" href="#">Forum</a>
+	<nav class="menubar-group menubar-group--special">
+		<a class="menubar-link" href="#">News</a>
+		<a class="menubar-link" href="#">Blog</a>
+		<a class="menubar-link" href="#">Forum</a>
 	</nav>
 
-	<nav class="menubar-group">
-		<a class="menubar-link fw-600" href="#"><i class="fa fa-cog"></i>&nbsp;&nbsp;Admin</a>
+	<nav class="menubar-group menubar-group--special">
+		<a class="menubar-link" href="#"><i class="fa fa-cog"></i>&nbsp;&nbsp;Admin</a>
 	</nav>
 </div>
 
