--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_Document.cshtml
@@ -98,6 +98,7 @@
 	@Html.SmartMetaRobots()
 	@Html.MetaAcceptLanguage()
     @Html.Partial("_ClientRes")
+	@Html.Partial("_GoogleFonts")
 
     @Html.SmartCssFiles(this.Url, ResourceLocation.Head)
     @Html.SmartScripts(this.Url, ResourceLocation.Head)
