--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/_shopbar.scss
@@ -59,20 +59,41 @@
 .menubar-group {
     display: inline-block;
     margin-left: 1rem;
-    //@include clearfix();
 }
 
 .menubar-link {
     display: inline-block;
     //float: left;
     font-size: 80%;
-    color: $body-color;
+    color: #666;
     padding: 1em 0.6em;
     text-decoration: none !important;
+    text-transform: uppercase;
 
     &:hover {
         background-color: #f5f5f5;
+        color: #000;
     }
+}
+
+.menubar-group--special {
+    font-weight: 600;
+    .menubar-link {
+        color: #000;
+    }
+}
+
+
+//
+// Megamenu (TODO: move later)
+// --------------------------------------------------
+
+.megamenu .nav-link {
+    font-weight: 600;
+}
+
+.navbar-light .megamenu .navbar-nav .nav-link {
+    color: $body-color;
 }
 
 
