--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
@@ -12,11 +12,14 @@ $enable-transitions:        true;
 $enable-hover-media-query:  false; 
 $enable-grid-classes:       true;
 
+$body-color:                #333;
+
 $headings-line-height:      1.3; 
 
 /*$font-family-sans-serif:    'Roboto', Helvetica, Arial, sans-serif;*/ 
+$font-family-sans-serif:    'Open Sans', sans-serif;
 
-//$font-size-base:            .92rem;
+$font-size-base:            .925rem;
 $line-height:                1.8;
 $line-height-sm:             1.8;
 $line-height-lg:             1.5;
