--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/MegaMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/MegaMenu.cshtml
@@ -42,52 +42,53 @@
 	return;
 }
 
-<ul class="nav navbar-nav x-nav-smart shrinkable">
-                    
-	@Html.Widget("megamenu_before_first_item")
+<div class="megamenu">
+	<ul class="nav navbar-nav x-nav-smart shrinkable">
 
-	@foreach (var node in Model.Root.Children)
-	{
-		var item = node.Value;
+		@Html.Widget("megamenu_before_first_item")
 
-		if (!item.Visible)
+		@foreach (var node in Model.Root.Children)
 		{
-			continue;
+			var item = node.Value;
+
+			if (!item.Visible)
+			{
+				continue;
+			}
+
+			var itemUrl = GetNodeLink(node);
+			var itemState = node.GetNodePathState(Model.Path);
+
+			<li class='@(GetCssClassForNode(node, itemState))'>
+				@if (node.HasChildren)
+				{
+					<a href="@itemUrl" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						@item.Text
+					</a>
+					@CreateDrilldownMenu(node.Children, true)
+				}
+				else
+				{
+					<a href="@itemUrl" class="nav-link">
+						@item.Text
+					</a>
+				}
+			</li>
 		}
 
-		var itemUrl = GetNodeLink(node);
-		var itemState = node.GetNodePathState(Model.Path);
+		@Html.Widget("megamenu_after_last_item")
 
-		<li class='@(GetCssClassForNode(node, itemState))'>
-			@if (node.HasChildren)
-			{
-				<a href="@itemUrl" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					@item.Text
-				</a>
-				@CreateDrilldownMenu(node.Children, true)
-			}
-			else
-			{
-				<a href="@itemUrl" class="nav-link">
-					@item.Text
-				</a>
-			}
+	</ul>
+
+	<ul class="nav navbar-nav x-nav-smart shrink-menu pull-right">
+		<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" rel="nofollow">
+				<i class="fa fa-ellipsis-h"></i>
+			</a>
+			<div class="dropdown-menu dropdown-menu-right"></div>
 		</li>
-	}
-
-	@Html.Widget("megamenu_after_last_item")
-
-</ul>
-
-<ul class="nav navbar-nav x-nav-smart shrink-menu pull-right" hidden>
-	<li class="nav-item dropdown">
-		<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" rel="nofollow">
-			<i class="fa fa-ellipsis-h"></i>
-		</a>
-		<div class="dropdown-menu dropdown-menu-right"></div>
-	</li>
-</ul>
-
+	</ul>
+</div>
 
 @helper CreateDrilldownMenu(IEnumerable<TreeNode<MenuItem>> nodes, bool isRoot)
 {
