--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -194,7 +194,7 @@
 		// start task
 		$(document).on('click', '.btn-run-task', function (e) {
 			e.preventDefault();
-			if (confirm('@T("Admin.Common.AreYouSure")')) {
+			if (confirm('@T("Admin.Common.AskToProceed")')) {
 				var form = $('#ProfileExportForm');
 				form.find('input[name=Id]').val($(this).attr('data-id'));
 				form.submit();
