Resolves #946 wrong weight display in shopping cart

--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -101,7 +101,7 @@
         @if (Model.DisplayWeight)
 		{
         <td class="weight nobr">
-            <span class="product-weight">@((item.Weight * item.Quantity).ToString("N2")) kg</span>
+            <span class="product-weight">@((item.Weight * item.Quantity).ToString("N2")) @Model.MeasureUnitName</span>
         </td>
         }
 		<td class="unit-price nobr">
